# coe379-naval-simulator

./: .gitignore  README.md  waves.txt
hull_mesh_generation/: README.md  capy_dataset.nc  main.py  output.json  pyproject.toml  render_simulation.py  series_60_offsets.py
ocean_waves_and_visualizer/: CMakeLists.txt  README.md  gen_waves.cpp  jonswap.hpp  jonswap_mpi.cpp  jonswap_py.cpp  pyproject.toml  ship_motion.cpp  visualizer.py
sample/: 70_output.json
utils/: README.md  plot_boat_pos_perf.py  plot_wave_gen_perf.py  pyproject.toml
